# src/docs/swagger.json
@@ -65,17 +65,6 @@
                         "bearerAuth": []
                     }
                 ],
-                "parameters": [
-                    {
-                      "in": "body",
-                      "name": "body",
-                      "description": "Created product object",
-                      "required": true,
-                      "schema": {
-                        "$ref": "#/components/schemas/Product"
-                      }
-                    }
-                  ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -228,16 +217,7 @@
                         "required": true,
                         "type": "integer",
                         "format": "int64"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "Updated product object",
-                        "required": true,
-                        "schema": {
-                          "$ref": "#/components/schemas/Product"
-                        }
-                      }
+                    }
                 ],
                 "summary": "Update a specific product",
                 "description": "This route will be responsible for update a product by ID",
@@ -350,17 +330,6 @@
                         "bearerAuth": []
                     }
                 ],
-                "parameters": [
-                    {
-                      "in": "body",
-                      "name": "body",
-                      "description": "Created category object",
-                      "required": true,
-                      "schema": {
-                        "$ref": "#/components/schemas/Category"
-                      }
-                    }
-                  ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -506,16 +475,7 @@
                         "required": true,
                         "type": "integer",
                         "format": "int64"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "Updated category object",
-                        "required": true,
-                        "schema": {
-                          "$ref": "#/components/schemas/Category"
-                        }
-                      }
+                    }
                 ],
                 "summary": "Update a specific product category",
                 "description": "This route will be responsible for update a product category by ID",
@@ -620,17 +580,6 @@
                         "bearerAuth": []
                     }
                 ],
-                "parameters": [
-                    {
-                      "in": "body",
-                      "name": "body",
-                      "description": "Created user object",
-                      "required": true,
-                      "schema": {
-                        "$ref": "#/components/schemas/User"
-                      }
-                    }
-                  ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -740,16 +689,7 @@
                         "required": true,
                         "type": "integer",
                         "format": "int64"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "Created user object",
-                        "required": true,
-                        "schema": {
-                          "$ref": "#/components/schemas/User"
-                        }
-                      }
+                    }
                 ],
                 "summary": "Return a specific user",
                 "description": "This route will be responsible for return an user by ID",
@@ -893,6 +833,137 @@
                 }
             }
         },
+        "/users/register": {
+            "post": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Sign up user to API",
+                "description": "This route will be responsible to the user sign up to API",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/User"
+                            },
+                            "examples": {
+                                "user": {
+                                    "value": {
+                                        "fullName": "Jhon Doe",
+                                        "email": "jhonhdoe@test.com",
+                                        "phone": 5531999999999,
+                                        "cpfCnpj": 11111111100,
+                                        "apiKey": "6408c5fca1bb1f33b014dee2",
+                                        "password": "122356d",
+                                        "status": true
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "500": {
+                        "description": "Sorry, Internal Server Error!"
+                    },
+                    "400": {
+                        "description": " Bad Request!"
+                    },
+                    "401": {
+                        "description": "Unauthorized!"
+                    },
+                    "404": {
+                        "description": "Not Found!"
+                    },
+                    "409": {
+                        "description": "Conflit!"
+                    },
+                    "201": {
+                        "description": "Created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/users/login": {
+            "get": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "User sign in to use API",
+                "description": "This route will be responsible to user sign in to the API",
+                "parameters": [
+                    {
+                        "name": "username",
+                        "in": "query",
+                        "description": "The user name for login",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "password",
+                        "in": "query",
+                        "description": "The password for login in clear text",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "headers": {
+                            "X-Expires-After": {
+                                "type": "string",
+                                "format": "date-time",
+                                "description": "date in UTC when token expires"
+                            },
+                            "X-Rate-Limit": {
+                                "type": "integer",
+                                "format": "int32",
+                                "description": "calls per hour allowed by the user"
+                            }
+                        },
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid username/password supplied"
+                    }
+                }
+            }
+        },
+        "/users/logout": {
+            "get": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Logs out current logged in user session",
+                "description": "",
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "operationId": "logout User",
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "parameters": [],
+                "responses": {
+                    "default": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
         "/profiles": {
             "post": {
                 "tags": [
@@ -905,17 +976,6 @@
                         "bearerAuth": []
                     }
                 ],
-                "parameters": [
-                    {
-                      "in": "body",
-                      "name": "body",
-                      "description": "Created profile object",
-                      "required": true,
-                      "schema": {
-                        "$ref": "#/components/schemas/Profile"
-                      }
-                    }
-                  ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -1013,16 +1073,7 @@
                         "required": true,
                         "type": "integer",
                         "format": "int64"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "Updated profile object",
-                        "required": true,
-                        "schema": {
-                          "$ref": "#/components/schemas/Profile"
-                        }
-                      }
+                    }
                 ],
                 "summary": "Return a specific profile",
                 "description": "This route will be responsible for return an profile by ID",
@@ -1173,17 +1224,6 @@
                         "bearerAuth": []
                     }
                 ],
-                "parameters": [
-                    {
-                      "in": "body",
-                      "name": "body",
-                      "description": "Created order object",
-                      "required": true,
-                      "schema": {
-                        "$ref": "#/components/schemas/Order"
-                      }
-                    }
-                  ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -1343,7 +1383,7 @@
                         "schema": {
                             "$ref": "#/components/schemas/Order"
                         }
-                      }
+                    }
                 ],
                 "summary": "Update a specific order",
                 "description": "This route will be responsible for update an order by ID",
@@ -1453,17 +1493,6 @@
                         "bearerAuth": []
                     }
                 ],
-                "parameters": [
-                    {
-                      "in": "body",
-                      "name": "body",
-                      "description": "Created cashie object",
-                      "required": true,
-                      "schema": {
-                        "$ref": "#/components/schemas/Cashie"
-                      }
-                    }
-                  ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -1642,155 +1671,6 @@
                     }
                 }
             }
-        },
-        "/register": {
-            "post": {
-                "tags": [
-                    "users"
-                ],
-                "summary": "Sign up user to API",
-                "description": "This route will be responsible to the user sign up to API",
-                "parameters": [
-                    {
-                      "in": "body",
-                      "name": "body",
-                      "description": "Created user object",
-                      "required": true,
-                      "schema": {
-                        "$ref": "#/components/schemas/User"
-                      }
-                    }
-                  ],
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/User"
-                            },
-                            "examples": {
-                                "user": {
-                                    "value": {
-                                        "fullName": "Jhon Doe",
-                                        "email": "jhonhdoe@test.com",
-                                        "phone": 5531999999999,
-                                        "cpfCnpj": 11111111100,
-                                        "apiKey": "6408c5fca1bb1f33b014dee2",
-                                        "password": "122356d",
-                                        "address": {
-                                            "street": "Rua XXX",
-                                            "neighborhood": "Bairro ZZZ",
-                                            "zipCode": "0000",
-                                            "status": true
-                                        },
-                                        "profile": "6409fedafffd6f3b2a321361",
-                                        "status": true
-                                    }
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "500": {
-                        "description": "Sorry, Internal Server Error!"
-                    },
-                    "400": {
-                        "description": " Bad Request!"
-                    },
-                    "401": {
-                        "description": "Unauthorized!"
-                    },
-                    "404": {
-                        "description": "Not Found!"
-                    },
-                    "409": {
-                        "description": "Conflit!"
-                    },
-                    "201": {
-                        "description": "Created",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/login": {
-            "get": {
-                "tags": [
-                    "users"
-                ],
-                "summary": "User sign in to use API",
-                "description": "This route will be responsible to user sign in to the API",
-                "parameters": [
-                    {
-                        "name": "username",
-                        "in": "query",
-                        "description": "The user name for login",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "password",
-                        "in": "query",
-                        "description": "The password for login in clear text",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "successful operation",
-                        "headers": {
-                            "X-Expires-After": {
-                                "type": "string",
-                                "format": "date-time",
-                                "description": "date in UTC when token expires"
-                            },
-                            "X-Rate-Limit": {
-                                "type": "integer",
-                                "format": "int32",
-                                "description": "calls per hour allowed by the user"
-                            }
-                        },
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid username/password supplied"
-                    }
-                }
-            }
-        },
-        "/logout": {
-            "get": {
-                "tags": [
-                    "users"
-                ],
-                "summary": "Logs out current logged in user session",
-                "description": "",
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ],
-                "operationId": "logout User",
-                "produces": [
-                    "application/json",
-                    "application/xml"
-                ],
-                "parameters": [],
-                "responses": {
-                    "default": {
-                        "description": "successful operation"
-                    }
-                }
-            }
         }
     },
     "components": {
@@ -1853,11 +1733,11 @@
                     "cpfCnpj": {
                         "type": "number"
                     },
-                    "password":{
+                    "password": {
                         "type": "string"
                     },
-                    "apiKey":{
-                        "type":"string"
+                    "apiKey": {
+                        "type": "string"
                     },
                     "address": {
                         "$ref": "#/components/schemas/Address"
